fixed JSHint warnings clash UX improvements - clashes on timetables are clickable - they highlight the clash notes below (and vice versa) Changes History and Clashes section appears only when relevant [have uncovered a bug where a clash does not seem to have a match on the class where it links to]

--- a/public/modules/timetables/css/timetable.css
+++ b/public/modules/timetables/css/timetable.css
@@ -4,14 +4,16 @@
 }
 
 .subjects li.dragging {
-  display     : inline-block;
-  margin-left : 100px;
   font-size   : smaller;
   font-weight : bold;
   color       : #999;
   border      : 0.1em dotted #0000ff !important;
-  background  : rgb(100, 100, 255) !important;
-  background  : rgba(100, 100, 255, 0.2) !important;
+  background  : rgb(255, 255, 255) !important;
+  background  : rgba(100, 100, 255, 0.1) !important;
+}
+
+.period a {
+  display : block;
 }
 
 .history-viewer {
